testsuite/tests/ghc-regress/typecheck/should_compile/tc174.hs
{-# OPTIONS -fglasgow-exts #-}

module ShouldCompile where

f x = (# x, x #) :: (# Int, Int #)
